--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/socket.io": "^3.0.2",
-    "canvas": "^2.7.0",
-    "datauri": "^3.0.0",
-    "express": "^5.0.0-alpha.8",
-    "jsdom": "^16.5.3",
+    "canvas": "^2.1.0",
     "phaser": "^3.54.0",
-    "socket.io": "^4.0.1"
+    "datauri": "^1.1.0",
+    "express": "^4.16.4",
+    "jsdom": "^13.0.0",
+    "socket.io": "^2.1.1"
   }
 }
