--- a/package.json
+++ b/package.json
@@ -1,25 +1,49 @@
 {
-  "name": "headless_start",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server/index.js",
+  "name": "Phaser-Coluseus-Platformer",
+  "version": "0.0.1",
+  "description": "Example of using `https://www.colyseus.io/` with `@geckos.io/phaser-on-nodejs`",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --inspect server/index.js"
+    "build:client": "parcel build src/client/public/game.html && parcel watch src/client/public/loginform.html",
+    "build:server": "tsc -p src/server/tsconfig.json",
+    "build": "concurrently \"npm:build:*\"",
+    "clean": "rm -rf ./build ./dist",
+    "serve:client": "parcel watch src/client/public/game.html && parcel watch src/client/public/loginform.html",
+    "serve:server": "nodemon src/server/server.ts",
+    "serve": "concurrently \"npm:serve:*\"",
+    "start": "node build/server/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hatala91/lizard-arena.git"
+  },
+  "keywords": [
+    "colyseus",
+    "phaser",
+    "geckos.io"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/hatala91/lizard-arena/issues"
+  },
+  "homepage": "https://github.com/hatala91/-arena#readme",
   "dependencies": {
-    "@types/socket.io": "^3.0.2",
-    "canvas": "^2.1.0",
-    "phaser": "^3.54.0",
-    "datauri": "^1.1.0",
-    "express": "^4.16.4",
-    "jsdom": "^13.0.0",
-    "socket.io": "^2.1.1"
+    "@geckos.io/phaser-on-nodejs": "^1.2.5",
+    "colyseus": "^0.14.23",
+    "concurrently": "^6.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "phaser": "^3.55.2",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
-    "minami": "^1.2.3"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.9.1",
+    "colyseus.js": "^0.14.13",
+    "nodemon": "^2.0.12",
+    "parcel": "^2.0.0-rc.0",
+    "prettier": "^2.4.0",
+    "ts-node": "^10.2.1"
   }
 }
