--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Example of using `https://www.colyseus.io/` with `@geckos.io/phaser-on-nodejs`",
   "scripts": {
-    "build:client": "parcel build src/client/public/game.html && parcel watch src/client/public/loginform.html",
+    "build:client": "parcel build src/client/public/game.html && parcel build src/client/public/loginform.html",
     "build:server": "tsc -p src/server/tsconfig.json",
     "build": "concurrently \"npm:build:*\"",
     "clean": "rm -rf ./build ./dist",
