--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "description": "Example of using `https://www.colyseus.io/` with `@geckos.io/phaser-on-nodejs`",
   "scripts": {
-    "build:client": "vite build --base=/src/client/",
+    "build:client": "parcel build src/client/public/game.html && parcel build src/client/public/loginform.html",
     "build:server": "tsc -p src/server/tsconfig.json",
     "build": "concurrently \"npm:build:*\"",
     "clean": "rm -rf ./build ./dist",
-    "serve:client": "vite --base=/src/client/",
+    "serve:client": "parcel watch src/client/public/game.html && parcel watch src/client/public/loginform.html",
     "serve:server": "nodemon src/server/server.ts",
     "serve": "concurrently \"npm:serve:*\"",
     "start": "node build/server/server.js",
@@ -45,7 +45,6 @@
     "nodemon": "^2.0.12",
     "parcel": "^2.0.0-rc.0",
     "prettier": "^2.4.0",
-    "ts-node": "^10.2.1",
-    "vite": "^2.8.0"
+    "ts-node": "^10.2.1"
   }
 }
