--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "phaser": "^3.55.2",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "@colyseus/monitor": "^0.14.22"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
