--- a/package.json
+++ b/package.json
@@ -1,51 +1,56 @@
 {
-  "name": "Phaser-Coluseus-Platformer",
-  "version": "0.0.1",
-  "description": "Example of using `https://www.colyseus.io/` with `@geckos.io/phaser-on-nodejs`",
-  "scripts": {
-    "build:client": "parcel build src/client/public/game.html && parcel build src/client/public/loginform.html",
+	"name": "phaser3-parcel-template",
+	"version": "1.0.0",
+	"description": "A typescript template project for Phaser 3 using Parceljs",
+	"scripts": {
     "build:server": "tsc -p src/server/tsconfig.json",
-    "build": "concurrently \"npm:build:*\"",
-    "clean": "rm -rf ./build ./dist",
-    "serve:client": "parcel watch src/client/public/game.html && parcel watch src/client/public/loginform.html",
     "serve:server": "nodemon src/server/server.ts",
-    "serve": "concurrently \"npm:serve:*\"",
-    "start": "node build/server/server.js",
-    "go": "npm run clean && npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hatala91/lizard-arena.git"
-  },
-  "keywords": [
-    "colyseus",
-    "phaser",
-    "geckos.io"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/hatala91/lizard-arena/issues"
-  },
-  "homepage": "https://github.com/hatala91/-arena#readme",
-  "dependencies": {
-    "@geckos.io/phaser-on-nodejs": "^1.2.5",
-    "colyseus": "^0.14.23",
-    "concurrently": "^6.2.1",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "phaser": "^3.55.2",
-    "typescript": "^4.4.3",
-    "@colyseus/monitor": "^0.14.22"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.9.1",
-    "colyseus.js": "^0.14.13",
-    "nodemon": "^2.0.12",
-    "parcel": "^2.0.0-rc.0",
-    "prettier": "^2.4.0",
-    "ts-node": "^10.2.1"
-  }
+		"start": "parcel src/client/public/game.html -p 8000",
+		"build": "parcel build src/client/public/game.html --out-dir dist",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"lint": "eslint ./src --ext .js,.jsx,.ts,.tsx"
+	},
+	"author": "supertommy",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/ourcade/phaser3-parcel-template.git"
+	},
+	"homepage": "https://github.com/ourcade/phaser3-parcel-template",
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^2.29.0",
+		"@typescript-eslint/parser": "^2.29.0",
+		"eslint": "^6.8.0",
+		"minimist": ">=1.2.2",
+		"parcel-plugin-clean-easy": "^1.0.2",
+		"parcel-plugin-static-files-copy": "^2.4.3",
+		"typescript": "^3.8.3",
+		"@types/cors": "^2.8.12",
+		"@types/express": "^4.17.13",
+		"@types/node": "^16.9.1",
+		"colyseus.js": "^0.14.13",
+		"nodemon": "^2.0.12",
+		"parcel": "^2.0.0-rc.0",
+		"prettier": "^2.4.0",
+		"ts-node": "^10.2.1"
+	},
+	"dependencies": {
+		"colyseus.js": "^0.14.13",
+		"phaser": "^3.55.2",
+		"@geckos.io/phaser-on-nodejs": "^1.2.5",
+		"colyseus": "^0.14.23",
+		"concurrently": "^6.2.1",
+		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"typescript": "^4.4.3",
+		"@colyseus/monitor": "^0.14.22"
+	},
+	"parcelCleanPaths": [
+		"dist"
+	],
+	"staticFiles": {
+		"staticPath": "src/client/public",
+		"watcherGlob": "**"
+	}
 }
