[~] repos phaserEditor3 à ajouter

--- a/phasereditor2d.config.json
+++ b/phasereditor2d.config.json
@@ -1,20 +1,17 @@
 {
     "plugins": [],
     "skip": [
-        "dist",
-        "node_modules",
-        "jsdoc",
-        "out",
-        "**/server",
-        "**/tilemap",
-        "types",
+        "**/node_modules/*",
+        "**/server/*",
+        "**/tilemap/*",
+        "**/types/*",
         "**/src/server/*",
         "**/src/client/public/assets/personnages/akhizonah/*",
         "**/src/client/public/assets/personnages/akhizonah/original/*",
         "**/src/client/public/assets/personnages/fakhear/*",
         "**/src/client/public/assets/personnages/fakhear/original/*",
         "**/src/client/public/assets/personnages/huzounet/unpack/*",
-        "**/src/client/public/assets/personnages/huzounet/original/*"
+        "**/src/client/public/assets/personnages/huzounet/*"
     ],
     "playUrl": "http://localhost:8080"
 }
