--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "phaser3-parcel-template",
+	"name": "Resident-Streamer",
 	"version": "1.0.0",
-	"description": "A typescript template project for Phaser 3 using Parceljs",
+	"description": "Resident Streamer est un jeu coopératifs, speed run, rush boss, multijoueur en ligne",
 	"scripts": {
 		"build:server": "tsc -p src/server/tsconfig.json",
 		"serve:server": "nodemon src/server/server.ts",
@@ -17,8 +17,6 @@
 		"@typescript-eslint/parser": "^2.29.0",
 		"eslint": "^6.8.0",
 		"minimist": ">=1.2.2",
-		"parcel-plugin-clean-easy": "^1.0.2",
-		"parcel-plugin-static-files-copy": "^2.4.3",
 		"typescript": "^3.8.3",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
